fix sidebar overlap by moving hero image into page content area

--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -136,9 +136,9 @@
       padding-right: 1em;
 
       @include breakpoint($large) {
-        max-width: 100%;
-        margin-left: 25%;
-        width: 70%;
+        max-width: $x-large;
+        padding-left: 0;
+        padding-right: 0;
         text-align: center;
       }
     }
